tests/parser/bad/type_t-cid-lparen-with.scilla
scilla_version 0
(* incorrect type argument, lower case*)
library TestLib

let f = fun (x : Option (bool)) => x
let m = True

contract Test
()
